modified the assets dirs

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recoilens: The Ultimate Recoil State Logger</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./src/website/css/style.css" />
   </head>
 
   <body>
     <header class="hero">
       <div class="container">
         <img
-          src="img/feature-image.png"
+          src="./src/website/img/feature-image.png"
           width="200px"
           height="180px"
           alt="Feature Image"
