added documentation page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recoilens: The Ultimate Recoil State Logger</title>
+    <title>Recoilens</title>
+    <link
+      rel="icon"
+      href="./src/website/img/feature-image.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="./src/website/css/style.css" />
   </head>
 
@@ -19,6 +24,9 @@
         <h1>Recoilens: The Ultimate Recoil State Logger</h1>
         <p>Track and visualize your Recoil state changes with ease.</p>
         <a href="#get-started" class="btn">Get Started</a>
+        <a href="./src/pages/documentation.html" class="btn" target="_blank"
+          >Documentation</a
+        >
       </div>
     </header>
 
